--- a/sensorFaces/src/main/webapp/login.xhtml
+++ b/sensorFaces/src/main/webapp/login.xhtml
@@ -3,8 +3,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui" >
 
 <f:view>
@@ -13,20 +12,20 @@
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <meta name="description" content=""/>
       <meta name="author" content=""/>
-      <link rel="icon" type="image/png" href="/resources/images/logo.png"/>
+      <link rel="icon" type="image/png" href="${pageContext.request.contextPath}/resources/images/logo.png"/>
       <title>Вход</title>
 
       <!-- Bootstrap Core CSS -->
-      <link href="/resources/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+      <link href="${pageContext.request.contextPath}/resources/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
       <!-- MetisMenu CSS -->
-      <link href="/resources/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet"/>
+      <link href="${pageContext.request.contextPath}/resources/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet"/>
 
       <!-- Custom CSS -->
-      <link href="/resources/dist/css/sb-admin-2.css" rel="stylesheet"/>
+      <link href="${pageContext.request.contextPath}/resources/dist/css/sb-admin-2.css" rel="stylesheet"/>
 
       <!-- Custom Fonts -->
-      <link href="/resources/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+      <link href="${pageContext.request.contextPath}/resources/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,18 +51,18 @@
                            <p:outputLabel for="loginId" value="Введите логин: "/>
 
                            <p:inputText id="loginId" styleClass="form-control" title="Binding with ManagedBean"
-                                        value="#{mainBean.login}">
+                                        value="">
                            </p:inputText>
 
                         <p:outputLabel for="passwordId" value="Введите пароль: "/>
 
 
                         <p:inputText id="passwordId" styleClass="form-control" type="password" title="Binding with ManagedBean"
-                                     value="#{mainBean.password}">
+                                     value="">
                         </p:inputText>
                            <br/>
 
-                        <a href="/index" class="btn btn-lg btn-success btn-block">Войти</a>
+                        <a href="${pageContext.request.contextPath}/index" class="btn btn-lg btn-success btn-block">Войти</a>
                      </h:form>
                   </div>
                </div>
@@ -72,16 +71,16 @@
       </div>
 
       <!-- jQuery -->
-      <script src="/resources/bower_components/jquery/dist/jquery.min.js" type="javascript"></script>
+      <script src="${pageContext.request.contextPath}/resources/bower_components/jquery/dist/jquery.min.js" type="javascript"></script>
 
       <!-- Bootstrap Core JavaScript -->
-      <script src="/resources/bower_components/bootstrap/dist/js/bootstrap.min.js" type="javascript"></script>
+      <script src="${pageContext.request.contextPath}/resources/bower_components/bootstrap/dist/js/bootstrap.min.js" type="javascript"></script>
 
       <!-- Metis Menu Plugin JavaScript -->
-      <script src="/resources/bower_components/metisMenu/dist/metisMenu.min.js" type="javascript"></script>
+      <script src="${pageContext.request.contextPath}/resources/bower_components/metisMenu/dist/metisMenu.min.js" type="javascript"></script>
 
       <!-- Custom Theme JavaScript -->
-      <script src="/resources/dist/js/sb-admin-2.js" type="javascript"></script>
+      <script src="${pageContext.request.contextPath}/resources/dist/js/sb-admin-2.js" type="javascript"></script>
 
 
 
